# MagicPlus

./: CMakeLists.txt  README.md  main.cpp
.VSCodeCounter/2020-11-29_22-30-47/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-11-29_22-57-33/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-11-30_12-29-05/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-12-03_10-48-19/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-12-05_22-27-08/: details.md  results.csv  results.md  results.txt
database/: database.db
include/: Admin.hpp  Arithmetic.hpp  CmdAnaly.hpp  DataBase.hpp  Formula.hpp  Loop.hpp  OpString.hpp
src/: Admin.cpp  Arithmetic.cpp  CMakeLists.txt  CmdAnaly.cpp  DataBase.cpp  Formula.cpp  Loop.cpp  OpString.cpp
